Removed vertical align property which was causing issues on some browsers

--- a/styles/stats.css
+++ b/styles/stats.css
@@ -106,7 +106,6 @@
 
 .stat-label h2 {
     line-height: 180%;
-    vertical-align: baseline;
 }
 
 .stat-label.scorepanel {
